+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 alpha 2?
=================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #7462: Implement the stringlib fast search algorithm for the `rfind`,
  `rindex`, `rsplit` and `rpartition` methods.  Patch by Florent Xicluna.

- Issue #5080: A number of functions and methods previously produced a
  DeprecationWarning when passed a float argument where an integer was
  expected.  These functions and methods now raise TypeError instead.
  The majority of the effects of this change are in the extension
  modules, but some core functions and methods are affected: notably
  the 'chr', 'range' and 'xrange' builtins, and many unicode/str
  methods.

- Issue #7604: Deleting an unset slotted attribute did not raise an
  AttributeError.

- Issue #7534: Fix handling of IEEE specials (infinities, nans,
  negative zero) in ** operator.  The behaviour now conforms to that
  described in C99 Annex F.

- Issue #7579: the msvcrt module now has docstrings for all its functions.

- Issue #7413: Passing '\0' as the separator to datetime.datetime.isoformat()
  used to drop the time part of the result.

- Issue #1811: improve accuracy and cross-platform consistency for
  true division of integers: the result of a/b is now correctly
  rounded for ints a and b (at least on IEEE 754 platforms), and in
  particular does not depend on the internal representation of a long.

- Issue #6108: unicode(exception) and str(exception) should return the same
  message when only __str__ (and not __unicode__) is overridden in the subclass.

- Issue #6834: replace the implementation for the 'python' and 'pythonw'
  executables on OSX.

  These executables now work properly with the arch(1) command:
  ``arch -ppc python`` will start a universal binary version of python
  in PPC mode (unlike previous releases).
